[package]
name = "requester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
mine_data_strutcs = {path = "../mine_data_strutcs"}
futures = "0.3.21"
bytes = "1.3.0"

