[package]
name = "requester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
reqwest.workspace = true
tokio.workspace = true
mine_data_strutcs = {path = "../mine_data_strutcs"}
bytes = "1.3.0"

