[package]
name = "uranium4Linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
console_output = []

[profile.dev]
opt-level = 1
overflow-checks = false
debug = 2
incremental = true
debug-assertions = true

[dependencies]
mine_data_strutcs = {path = "../mine_data_strutcs"}
requester = {path = "../requester"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
futures= "0.3.25"
sha-1 = "0.10.0"
hex = "0.4.3"
zip = "0.6.2"
fs_extra = "1.2.0"
libc = "0.2.126" 
murmurhash32 = {git = "https://github.com/gorilla-devs/murmurhash32.git"} 
once_cell = "1.16.0"
