[package]
name = "uranium4Linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
console_output = []


[dependencies]
serde.workspace = true
reqwest.workspace = true
tokio.workspace = true
mine_data_strutcs = {path = "../mine_data_strutcs"}
requester = {path = "../requester"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures= "0.3.25"
sha1 = "0.10.5"
hex = "0.4.3"
zip = "0.6.2"
fs_extra = "1.3.0"
murmurhash32 = {git = "https://github.com/gorilla-devs/murmurhash32.git"} 
once_cell = "1.16.0"
chrono = "0.4.23"
bytes = "1.3.0"
thiserror = "1.0.40"
